--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <?php
 header("Location: views/login.php");
+<html>
+  <head>
+    <title>Redirect to login page
+    </title>
+  </head>
+  <body>
+    <form action="views/login.php">
+      <button type="submit">Go to login</button>
+    </form>
+  </body>
+</html>
